--- a/OnTap/nbproject/project.properties
+++ b/OnTap/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=41_LeVanTu
-application.vendor=Kaiser
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,9 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/41_LeVanTu.jar
+dist.jar=${dist.dir}/OnTap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+dist.jlink.dir=${dist.dir}/jlink
+dist.jlink.output=${dist.jlink.dir}/OnTap
 excludes=
 includes=**
 jar.compress=false
@@ -65,9 +65,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jlink.launcher=false
-jlink.launcher.name=41_LeVanTu
-main.class=pkg41_levantu.Main
+# The jlink additional root modules to resolve
+jlink.additionalmodules=
+# The jlink additional command line parameters
+jlink.additionalparam=
+jlink.launcher=true
+jlink.launcher.name=OnTap
+main.class=ontap.OnTap
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
