--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ replay_pid*
 /OnTap/build/
 /41_LeVanTu/nbproject/private/
 /41_LeVanTu/build/
+/Chuong3/nbproject/private/
+/Chuong3/target/
+/Chuong3/build/
