Xong UI forms xác thực

--- a/QuanLyLinhKien/nbproject/project.properties
+++ b/QuanLyLinhKien/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.mssql-jdbc-12.6.1.jre8.jar=..\\Chuong3\\mssql-jdbc-12.6.1.jre8.ja
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
