--- a/QuanLyLinhKien/nbproject/project.properties
+++ b/QuanLyLinhKien/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=QuanLyLinhKien
-main.class=quanlylinhkien.QuanLyLinhKien
+main.class=View.XacThuc.DangNhap
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
