--- a/QuanLyLinhKien/nbproject/project.properties
+++ b/QuanLyLinhKien/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=QuanLyLinhKien
+application.vendor=Kaiser
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/QuanLyLinhKien.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/QuanLyLinhKien
+endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-12.6.1.jre8.jar=..\\Chuong3\\mssql-jdbc-12.6.1.jre8.jar
 includes=**
